--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "BATTISTELLA Damien <battistella@protonmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "patch": "npm version patch && npm publish"
   },
   "devDependencies": {},
   "repository": {
