--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yquem",
   "version": "1.0.0",
   "description": "Fetches subtitles for tv shows episodes from Beta Series.",
-  "main": "medoc.js",
+  "main": "yquem.js",
   "author": "BATTISTELLA Damien <battistella@protonmail.com>",
   "license": "MIT",
   "scripts": {
