--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
   },
   "homepage": "https://github.com/Wifsimster/yquem#readme",
   "dependencies": {
-    "date-fns": "^2.0.0-alpha.27"
+    "date-fns": "^2.1.0"
   }
 }
